--- a/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
@@ -14,7 +14,7 @@
     <pagination-controls (pageChange)="pageActual = $event"></pagination-controls>
 </div>
 <div class="container-fluid" *ngIf="isCreator===true">
-    <h2 class="text-center mt-3">Aquí encuentras todas tus recetas {{owner.name}}</h2>
+    <h2 class="text-center mt-3" *ngIf="owner">Aquí encuentras todas tus recetas {{owner.name}}</h2>
     <table class="table table-hover table-striped" *ngIf="recipes">
         <thead>
             <tr class="headColor text-center">
