--- a/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.html
@@ -46,14 +46,14 @@
     </table>
 </div>
 
-<div class="container-fluid my-3" *ngIf="isEdit">
-    <form [formGroup]="formGroup" class="custom-form" method="post" *ngIf="formGroup" novalidate>
+<div class="container-fluid my-3 row" *ngIf="isEdit">
+    <form [formGroup]="formGroup" class="custom-form form-row col-4" method="post" *ngIf="formGroup" novalidate>
         <h1 class="text-center">Registro</h1>
-        <input type="text" formControlName="name" name="name" placeholder="Name" required />
+        <input type="text" disabled formControlName="name" name="name" placeholder="Name" required />
         <div *ngIf="formGroup.controls['name'].invalid && formGroup.controls['name'].dirty">
             <div class="text-danger">Campo obligatorio</div>
         </div>
-        <input type="text" formControlName="surname" name="surname" placeholder="Surname" />
+        <input type="text" disabled formControlName="surname" name="surname" placeholder="Surname" />
         <select name="rol" formControlName="rolUser">
     <option disabled selected>Selecciona un rol</option>
     <option *ngFor="let rols of roles" [value]="rols.id">{{rols.name}}</option>
@@ -61,39 +61,24 @@
         <div *ngIf="formGroup.controls['rolUser'].invalid && formGroup.controls['rolUser'].dirty">
             <div class="text-danger">Selecciona un rol</div>
         </div>
-        <input type="email" formControlName="email" name="email" placeholder="Email" required />
+        <input type="email" disabled formControlName="email" name="email" placeholder="Email" required />
         <div *ngIf="formGroup.controls['email'].invalid && formGroup.controls['email'].dirty">
             <div class="text-danger" *ngIf="formGroup.controls['email'].hasError('email')">Introduce un email valido</div>
         </div>
-        <div class="form-inline">
-            <input class="col" [type]="hide ? 'password' : 'text'" formControlName="password" name="password" placeholder="Password" required />
-            <button class="col-sm-2 ml-2" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <fa-icon *ngIf="!hide" [icon]="faEye"></fa-icon>
-      <fa-icon *ngIf="hide" [icon]="faEyeSlash"></fa-icon>
-    </button>
-        </div>
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
-            8 caracteres</div>
-
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
-            Minimo un número</div>
-
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasCapitalCase')  ? 'text-danger' : 'text-success'">
-            Minimo una mayúscula</div>
-
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasSmallCase')  ? 'text-danger' : 'text-success'">
-            Minimo una minúscula</div>
-
-        <div class="form-inline">
-            <input class="col" type="password" [type]="hide2 ? 'password' : 'text'" formControlName="confirmPassword" name="password" placeholder="Repeat the password" required />
-            <button class="col-sm-2 ml-2" (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <fa-icon *ngIf="!hide2" [icon]="faEye"></fa-icon>
-      <fa-icon *ngIf="hide2" [icon]="faEyeSlash"></fa-icon>
-    </button>
-        </div>
-        <div *ngIf="formGroup.controls['confirmPassword'].dirty">
-            <div class="text-danger" *ngIf="formGroup.value['password']!==formGroup.value['confirmPassword']">Las contraseñas no coinciden</div>
-        </div>
         <button type="submit" [disabled]="formGroup.invalid">Guardar Cambios</button>
+    </form>
+    <form class="form-control-lg col-6 p-lg-5 ml-5 formImg form-row">
+        <h1 class="text-center">Añadir imagen</h1>
+        <div class="form-row">
+            <input (change)="selectImg($event)" class="form-row" type="file" accept="image/png, .jpeg, .jpg, image/gif">
+        </div>
+        <div *ngIf="progreso>0" class="progress form-row">
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" [ngStyle]="{width:progreso+'%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
+                {{progreso}}%
+            </div>
+        </div>
+        <div class="form-row mt-3">
+            <button (click)="addOrEditImg()" class="btn btn-primary ml-3" type="button">Añadir Foto</button>
+        </div>
     </form>
 </div>
