--- a/finalproject-front/src/app/components/navBar/navBar.component.html
+++ b/finalproject-front/src/app/components/navBar/navBar.component.html
@@ -15,7 +15,7 @@
             </li>
             <li class="nav-item inline my-2 my-lg-0">
                 <nav>
-                    <button class="nav-link" *ngIf="user!==null" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="nav-link bordes" *ngIf="user!==null" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                       <fa-icon *ngIf="user.roles[0].name==='ROLE_READER'"  [icon]="faUser" class="ml-3"> </fa-icon>
                       <fa-icon *ngIf="user.roles[0].name==='ROLE_CREATOR'"  [icon]="faUserEdit" class="ml-3"> </fa-icon>
                       <fa-icon *ngIf="user.roles[0].name==='ROLE_ADMIN'"  [icon]="faUserCog" class="ml-3"> </fa-icon>
