--- a/finalproject-front/src/app/modules/finalProject/components/label/label.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/label/label.component.html
@@ -1,6 +1,6 @@
 <app-navBar></app-navBar>
 <div class="container-fluid">
-    <h2 *ngIf="label">Recetas con la etiqueta {{label.name}}</h2>
+    <h2 *ngIf="label" class="text-center">Recetas con la etiqueta {{label.name}}</h2>
 
     <div class="row row-cols-md-3" *ngIf="recipes">
         <div class="col mb-4" *ngFor="let recipe of recipes | paginate:{itemsPerPage:6, currentPage: pageActual}">
@@ -12,5 +12,7 @@
             </div>
         </div>
     </div>
-    <pagination-controls (pageChange)="pageActual = $event"></pagination-controls>
+    <div class="mt-2 pb-3">
+        <pagination-controls (pageChange)="pageActual = $event"></pagination-controls>
+    </div>
 </div>
