--- a/finalproject-front/src/app/modules/finalProject/components/register/register.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/register/register.component.html
@@ -1,11 +1,11 @@
 <div class="register container-fluid my-3">
     <form [formGroup]="formGroup" class="custom-form" method="post" *ngIf="formGroup" novalidate>
         <h1 class="text-center">Registro</h1>
-        <input type="text" formControlName="name" name="name" placeholder="Name" required />
+        <input type="text" class="form-control" formControlName="name" name="name" placeholder="Nombre" required />
         <div *ngIf="formGroup.controls['name'].invalid && formGroup.controls['name'].dirty">
             <div class="text-danger">Campo obligatorio</div>
         </div>
-        <input type="text" formControlName="surname" name="surname" placeholder="Surname" />
+        <input type="text" class="form-control" formControlName="surname" name="surname" placeholder="Apellido" />
         <select name="rol" formControlName="rolUser">
       <option disabled selected>Selecciona un rol</option>
       <option *ngFor="let rols of roles" [value]="rols.id">{{rols.name}}</option>
@@ -13,40 +13,41 @@
         <div *ngIf="formGroup.controls['rolUser'].invalid && formGroup.controls['rolUser'].dirty">
             <div class="text-danger">Selecciona un rol</div>
         </div>
-        <input type="email" formControlName="email" name="email" placeholder="Email" required />
+        <input type="email" class="form-control" formControlName="email" name="email" placeholder="Email" required />
         <div *ngIf="formGroup.controls['email'].invalid && formGroup.controls['email'].dirty">
             <div class="text-danger" *ngIf="formGroup.controls['email'].hasError('email')">Introduce un email valido</div>
         </div>
         <div class="form-inline">
-            <input class="col" [type]="hide ? 'password' : 'text'" formControlName="password" name="password" placeholder="Password" required />
-            <button class="col-sm-2 ml-2" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <input class="col form-control" [type]="hide ? 'password' : 'text'" formControlName="password" name="password" placeholder="Contraseña" required />
+            <button class="col-sm-2 ml-2 other" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
         <fa-icon *ngIf="!hide" [icon]="faEye"></fa-icon>
         <fa-icon *ngIf="hide" [icon]="faEyeSlash"></fa-icon>
       </button>
         </div>
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
-            8 caracteres</div>
+        <div *ngIf="formGroup.controls['password'].dirty">
+            <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
+                8 caracteres</div>
 
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
-            Minimo un número</div>
+            <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
+                Mínimo un número</div>
 
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasCapitalCase')  ? 'text-danger' : 'text-success'">
-            Minimo una mayúscula</div>
+            <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasCapitalCase')  ? 'text-danger' : 'text-success'">
+                Mínimo una mayúscula</div>
 
-        <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasSmallCase')  ? 'text-danger' : 'text-success'">
-            Minimo una minúscula</div>
-
+            <div class="col" [ngClass]="formGroup.controls['password'].hasError('required') || formGroup.controls['password'].hasError('hasSmallCase')  ? 'text-danger' : 'text-success'">
+                Mínimo una minúscula</div>
+        </div>
         <div class="form-inline">
-            <input class="col" type="password" [type]="hide2 ? 'password' : 'text'" formControlName="confirmPassword" name="password" placeholder="Repeat the password" required />
-            <button class="col-sm-2 ml-2" (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <input class="col form-control" type="password" [type]="hide2 ? 'password' : 'text'" formControlName="confirmPassword" name="password" placeholder="Repetir contraseña" required />
+            <button class="col-sm-2 ml-2 other" (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
         <fa-icon *ngIf="!hide2" [icon]="faEye"></fa-icon>
         <fa-icon *ngIf="hide2" [icon]="faEyeSlash"></fa-icon>
       </button>
         </div>
-        <div *ngIf="formGroup.controls['confirmPassword'].dirty">
+        <div *ngIf="formGroup.controls['confirmPassword'].dirty && formGroup.controls['confirmPassword'].invalid">
             <div class="text-danger" *ngIf="formGroup.value['password']!==formGroup.value['confirmPassword']">Las contraseñas no coinciden</div>
         </div>
-        <button type="submit" [disabled]="formGroup.invalid" (click)="register()">Register</button>
-        <button type="button" class="mt-4" (click)="login()">Login</button>
+        <button type="submit" class="btn" [disabled]="formGroup.invalid" (click)="register()">Registrarse</button>
+        <button type="button" class="mt-4 btn" (click)="login()">Iniciar sesión</button>
     </form>
 </div>
