--- a/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
@@ -3,14 +3,14 @@
         <h1 class="text-center">Login</h1>
         <input type="email" class="form-control" formControlName="email" name="email" placeholder="Email" required="required">
         <div class="form-inline">
-            <input class="col" [type]="hide ? 'password' : 'text'" formControlName="pass" name="password" placeholder="Password" required>
-            <button class="col-sm-2 ml-2" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <input class="col form-control" [type]="hide ? 'password' : 'text'" formControlName="pass" name="password" placeholder="Password" required>
+            <button class="col-sm-2 ml-2 other" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             <fa-icon *ngIf="!hide"  [icon]="faEye"></fa-icon>
             <fa-icon *ngIf="hide"  [icon]="faEyeSlash"></fa-icon>
             </button>
         </div>
         <div *ngIf="esError===true">{{error}}</div>
-        <button type="submit" (click)="recogerDatos()" [disabled]="!form">Login</button>
-        <button type="button" class="mt-4" (click)="register()">Register</button>
+        <button type="submit" class="btn" (click)="recogerDatos()" [disabled]="form.invalid">Login</button>
+        <button type="button" class="mt-4 btn" (click)="register()">Registrarse</button>
     </form>
 </div>
