--- a/finalproject-front/src/app/modules/finalProject/components/user/user.component.scss
+++ b/finalproject-front/src/app/modules/finalProject/components/user/user.component.scss
@@ -1,10 +1,10 @@
 * {
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h1 {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     margin: 0;
     padding: 0;
@@ -14,13 +14,10 @@ h1 {
     min-width: 300px;
     max-width: 60%;
     margin: 0px auto;
-    background: #ef32d9;
-    background: -webkit-linear-gradient(to left, #b1f1f0, #f5b3ed);
-    background: linear-gradient(to left, #b1f1f0, #f5b3ed);
+    background: #f5f3f5;
     padding: 2rem 3rem;
     margin: auto;
     border-radius: 2.5rem;
-    background-color: #ecf0f3;
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
     color: black;
     margin-top: 10rem;
@@ -35,11 +32,9 @@ h1 {
     border: none;
     box-shadow: inset -5px -5px 15px rgba(255, 255, 255, 0.8), inset 5px 5px 10px rgba(0, 0, 0, 0.1);
     border: 0 none;
-    background: #ef32d9;
     color: black;
     font-size: 1.5vw;
-    background: -webkit-linear-gradient(to left, #b1f1f0, #f3aeeb);
-    background: linear-gradient(to left, #b1f1f0, #f3aeeb);
+    background: #f5f3f5;
 }
 
 .custom-form button {
@@ -60,4 +55,8 @@ h1 {
 
 .custom-form button.mt-4 {
     background-color: #E9D3E7;
+}
+
+.other {
+    background: #f5f3f5 !important;
 }
