contact form added

--- a/finalproject-front/src/app/modules/finalProject/components/label/label.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/label/label.component.css
@@ -8,5 +8,7 @@ div.card:hover {
 }
 
 h2 {
-    font: oblique bold 2vw cursive;
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2vw;
 }
