--- a/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.css
@@ -1,3 +1,38 @@
 img {
     width: 2vw;
 }
+
+.imgUser {
+    width: 10vw;
+}
+
+.formImg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50vh;
+    border: solid 1px #ccd8ef;
+}
+
+.imgStyle {
+    border: solid 1px #E9D3E7;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2vw;
+    margin-top: 1vw;
+}
+
+.btnColorA {
+    background-color: #BCE8E3;
+}
+
+.btnColorB {
+    background-color: rgb(253, 125, 125);
+}
