--- a/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/personal-data/personal-data.component.html
@@ -48,26 +48,26 @@
 
 <div class="container-fluid" *ngIf="isEdit">
     <div class="row">
-        <form [formGroup]="formGroup" class="custom-form formImg col-5 mt-3 ml-2" method="post" *ngIf="formGroup" novalidate>
+        <form [formGroup]="formGroup" class="custom-form formImg col-4 mt-3 ml-2" method="post" *ngIf="formGroup" novalidate>
             <h1 class="text-center">Cambiar datos</h1>
 
             <input type="text" class="form-control" disabled formControlName="name" name="name" placeholder="Name" required />
             <br>
             <input type="text" class="form-control" disabled formControlName="surname" name="surname" placeholder="Surname" />
 
-            <select name="rol" class="form-control mt-3 mb-3" formControlName="rolUser">
+            <select disabled name="rol" class="form-control mt-3 mb-3" formControlName="rolUser">
     <option disabled selected>Selecciona un rol</option>
     <option *ngFor="let rols of roles" [value]="rols.id">{{rols.name}}</option>
   </select>
             <input type="email" class="form-control" disabled formControlName="email" name="email" placeholder="Email" required />
 
-            <div class="form-row mt-3 mb-3">
+            <!--<div class="form-row mt-3 mb-3">
                 <button class="btn btnColorA" (click)="saveChange()" type="submit" [disabled]="formGroup.invalid">Guardar Cambios</button>
                 <button class="btn btnColorB ml-2" (click)="cancelChange()" type="button">Cancelar</button>
-            </div>
+            </div>-->
         </form>
 
-        <form class="custom-form form-group col-4 formImg mt-3">
+        <form class="custom-form form-group col-5 formImg mt-3">
             <h1 class="text-center">Añadir imagen</h1>
             <input type="file" (change)="selectImg($event)" accept="image/png, .jpeg, .jpg, image/gif" class="form-control" id="customFile" />
             <div *ngIf="progreso>0" class="progress form-row">
@@ -77,6 +77,7 @@
             </div>
             <div class="form-row mt-3">
                 <button (click)="addOrEditImg()" class="btn btnColorA ml-3" type="button">Añadir Foto</button>
+                <button class="btn btnColorB ml-2" (click)="cancelChange()" type="button">Cancelar</button>
             </div>
         </form>
         <div class="col text-center mt-3 mr-2 imgStyle" *ngIf="user.img">
