--- a/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
@@ -17,7 +17,8 @@
 </div>
 <div class="container-fluid" *ngIf="isCreator===true">
     <h2 class="text-center mt-3" *ngIf="owner">Aquí encuentras todas tus recetas {{owner.name}}</h2>
-    <table class="table table-hover table-striped" *ngIf="recipes">
+    <h3 class="text-center text-danger" *ngIf="recipes && recipes.length===0">No tienes recetas añadidas</h3>
+    <table class="table table-hover table-striped" *ngIf="recipes && recipes.length!==0">
         <thead>
             <tr class="headColor text-center">
                 <th scope="col">Nombre</th>
@@ -29,18 +30,18 @@
             <tr class="text-center" *ngFor="let recipe of recipes | paginate:{itemsPerPage:5, currentPage: pageActual}">
                 <td (click)="findRecipe(recipe.id)">{{recipe.name}}</td>
                 <td>{{recipe.state}}<span *ngIf="recipe.state==='Borrador'">
-                  <button class="ml-2" (click)="publicatedRecipe(recipe.id)"><img class="iconos" src="assets/icons/megafono.png"></button>
+                  <button class="ml-2" (click)="publicatedRecipe(recipe.id)" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Publicar receta"><img class="iconos" src="assets/icons/megafono.png"></button>
                 </span></td>
                 <td>
-                    <button (click)="editImagen(recipe.id)"><img class="iconos" src="assets/icons/editarImg.png"></button>
-                    <button class="ml-3" (click)="editRecipe(recipe.id)"><img class="iconos" src="assets/icons/edicion.png"></button>
-                    <button class="ml-3" (click)="removeRecipe(recipe.id)"><img class="iconos" src="assets/icons/borrador.png"></button>
+                    <button (click)="editImagen(recipe.id)" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar imagen"><img class="iconos" src="assets/icons/editarImg.png"></button>
+                    <button class="ml-3" (click)="editRecipe(recipe.id)" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar recetas"><img class="iconos" src="assets/icons/edicion.png"></button>
+                    <button class="ml-3" (click)="removeRecipe(recipe.id)" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Borrar receta"><img class="iconos" src="assets/icons/borrador.png"></button>
                 </td>
             </tr>
         </tbody>
     </table>
 
-    <pagination-controls (pageChange)="pageActual = $event"></pagination-controls>
+    <pagination-controls *ngIf="recipes && recipes.length!==0" (pageChange)="pageActual = $event"></pagination-controls>
 
     <a class="btn-flotante" (click)="addRecipe()"><img src="assets/icons/mas.png" class="icono">Añadir nueva receta</a>
 </div>
