verification email and pop up eliminated added

--- a/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.html
@@ -67,8 +67,7 @@
                 <tbody>
                     <tr *ngFor="let label of labels">
                         <td>{{label.name}}</td>
-                        <td><button class="ml-3" (click)="removeLabel(label.id)"><img class="iconos"
-                  src="assets/icons/borrador.png"></button></td>
+                        <td><button class="ml-3" (click)="removeLabel(label.id)"><img class="iconos" src="assets/icons/borrador.png"></button></td>
                     </tr>
                 </tbody>
             </table>
